--- a/server/views/relinksys.ejs
+++ b/server/views/relinksys.ejs
@@ -1,8 +1,15 @@
 <html>
 <link rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
+
+
+
     html body {
         zoom: 100%;
+       
+
     }
 
     .headingName {
@@ -66,8 +73,8 @@
 }
 
 .row2 b{
-    background-color: #ed6c02;
-    padding: 0px 5px;
+    background-color: #ff8b47;
+    padding: 0px 5px; font-family:  Arial, Helvetica, sans-serif;
 }
 .row2 p{
     margin: 0;
@@ -92,13 +99,15 @@
 .row5{
     width: 100%;
     height: 100px;
+    font-style: italic;
+    color: #1e1e55;
 }
 .row5 .col1{
-    width: 50%;
+    width: 40%;
     float: left;
 }
 .row5 .col2{
-    width: 50%;
+    width: 60%;
     float: right;
     text-align: left;
 }
@@ -109,8 +118,11 @@
 }
 </style>
 <body>
+    <section style="position: relative;">
+      <div class="waterMaek" style="position: absolute;width: 100%; top: 30%; opacity: .1;"> <img src=" <%=data.LogoURL1%>" alt="" width="100%"> </div>
+ 
   <section>
-     <header>
+     <header style="margin-top: 2%;">
         <div class="row">
             <div class="col1">
                 <img src=" <%=data.LogoURL1%>" alt="" width="50%" alt="logo">
@@ -140,14 +152,14 @@
         </div>
         <div class="col2">
             <b>SALER NAME</b>
-            <p>Relinksys Software Pvt. Ltd.</p>
+            <p style="font-weight: 600;">Relinksys Software Pvt. Ltd.</p>
             <p>GST NO.- 27AAJCR8437N1ZK</p>
             <p>Add.- Narhe, Pune-411041</p>
             <p>Mobile: 9766666248</p>
         </div>
         <div class="col3">
         <b>BUYEY DETAILS</b>
-        <p>City Opticals and Pharmacy</p>
+        <p style="font-weight: 600;">City Opticals and Pharmacy</p>
         <p>GST NO.- 09AANPZ3969L1ZG</p>
         <p>Adress: Ismailpur</p>
         <p>E-Mail: zaidash2007@gmail.com</p>
@@ -158,7 +170,7 @@
   <section style="width: 100%;">
     <table style="width: 100%;">
         <thead>
-            <tr style="background-color: #ed6c02;">
+            <tr style="background-color: #ff8b47; font-family:  Arial, Helvetica, sans-serif;">
                 <th>Print By</th>
                 <th>P.O.#</th>
                 <th>SHIP DATE</th>
@@ -180,9 +192,9 @@
     </table>
   </section>
   <section style="width: 100%;">
-    <table style="width: 100%; border-bottom: 1px solid #000;">
+    <table style="width: 100%; border-bottom: 1px solid #000; height: 200PX;">
         <thead>
-            <tr style="background-color: #ed6c02;">
+            <tr style="background-color: #ff8b47; font-family:  Arial, Helvetica, sans-serif;">
                 <th>SR NO.</th>
                 <th>DESCRIPTION</th>
                 <th>HSN CODE</th>
@@ -208,17 +220,17 @@
     <div class="row4">
         <div class="col1">
             <table style="text-align: left;">
-                <tr style="background-color: #ed6c02; "> <th style="padding-right: 280px;">Company Bank Details</th></tr>
+                <tr style="background-color: #ff8b47; font-family:  Arial, Helvetica, sans-serif;"> <th style="padding-right: 280px;">Company Bank Details</th></tr>
                 <tr> <td> Account Type: Current Account</td></tr>
                 <tr><td>Bank Name: ICICI Bank </td></tr>
                 <tr><td>Account No. 349105001016 </td></tr>
                 <tr><td>IFSC Code: ICIC0003491 </td></tr>
             </table>
-            <table  style="text-align: left; border: 1px solid #000;">
-                <tr style="background-color: #ed6c02;"> <th>Instructions</th></tr>
+            <table  style="text-align: left; border: 1px solid #000;font-family:  Arial, Helvetica, sans-serif; font-size: 13px;">
+                <tr style="background-color: #ff8b47; font-size: 16px; "> <th>Instructions</th></tr>
                 <tr> <td> 1.Full payment in advance is required and you will be invoiced on reciept.</td></tr>
-                <tr> <td> 1.Full payment in advance is required and you will be invoiced on reciept.</td></tr>
-                <tr> <td> 1.Full payment in advance is required and you will be invoiced on reciept.</td></tr>
+                <tr> <td> 2.We hope our offers appeals to you & would be glad to business with you.</td></tr>
+                <tr> <td> 3.All deposits or advanced payments would be non-refundable.</td></tr>
             </table>
            
          
@@ -226,22 +238,22 @@
         <div class="col2">
            <table style="text-align: center; padding-left: 3%;">
             <tr>
-                <th style="background-color: #ed6c02;">SUBTOTAL</th>
+                <th style="background-color: #ff8b47;">SUBTOTAL</th>
                 <th></th>
                 <th>3600</th>
             </tr>
             <tr>
-                <th style="background-color: #ed6c02;">C GST</th>
+                <th style="background-color: #ff8b47;">C GST</th>
                 <td style="padding: 0 5%;">0%</td>
                 <td>0</td>
             </tr>
             <tr>
-                <th style="background-color: #ed6c02;">S GST</th>
+                <th style="background-color: #ff8b47;">S GST</th>
                 <td style="padding: 0 5%;">0%</td>
                 <td>0</td>
             </tr>
             <tr>
-                <th style="background-color: #ed6c02;">I GST</th>
+                <th style="background-color: #ff8b47;">I GST</th>
                 <td style="padding: 0 5%;">0%</td>
                 <td>0</td>
             </tr>
@@ -251,9 +263,9 @@
                 <td></td>
             </tr>
             <tr>
-                <th style="background-color: #ed6c02;">GRAND TOTAL</th>
+                <th style="background-color: #ff8b47;">GRAND TOTAL</th>
                 <td></td>
-                <td style="background-color: #ed6c02;">INR 4,248.00</td>
+                <td style="background-color: #ff8b47;">INR 4,248.00</td>
             </tr>
            </table>
            <table  style="text-align: center; margin-top: 15%;">
@@ -266,17 +278,19 @@
 
   <section>
     <div class="row5">
-        <div class="col1"> <h1>Authorized Signature</h1></div>
-        <div class="col2"> <h1>Thankyou For Your Business</h1></div>
+        <div class="col1"> <h3>Authorized Signature</h3></div>
+        <div class="col2"> <h3>Thankyou For Your Business</h3></div>
     </div>
   </section>
   <section>
     <div class="row6">
-       <p>Office No.303, Jay Complex, Narhe Road, Narhe, <br>
+       <p style=" font-family:  Arial, Helvetica, sans-serif;">Office No.303, Jay Complex, Narhe Road, Narhe, <br>
         Pune-411041 (Maharashtra)</p>
      
     </div>
   </section>
+
+</section>
 </body>
 
 </html>
