--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -65,7 +65,7 @@
                                                 <mat-label></mat-label>
                                                 <mat-select name="Position" [(ngModel)]="data.Gender" #Gendercontrol>
                                                     <mat-option value="MR.">Mr.</mat-option>
-                                                    <mat-option value="DR.">Mrs.</mat-option>
+                                                    <mat-option value="Mrs.">Mrs.</mat-option>
                                                     <mat-option value="Miss.">Miss.</mat-option>
                                                     <mat-option value="DR.">Dr.</mat-option>
                                                     <mat-option value="ADV.">ADV.</mat-option>
