--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -18,7 +18,7 @@
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>From</mat-label>
                                             <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #DOBcontrol [disabled]="!editCashCollectionReport" />
+                                                #FromDatecontrol [disabled]="!editCashCollectionReport" />
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
